--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body h2 {
 header {
     width: 100%;
     height: 100vh;
-    background-image: url(./img/backgroundpc.png);
+    background-image: url(./img/backgrounddesktop.png); /* Cambia la imagen */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
